--- a/templates/interfata_clientv2.html
+++ b/templates/interfata_clientv2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Date Meteorologice</title>
+    <title>MeteoHub Browser</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,8 +48,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Date Meteorologice</h1>
-        <h2>           MeteoHub</h2>
+        <h1>MeteoHub</h1>
+        <h2>Apasă pe butonul cu informația dorită</h2>
         
         <button onclick="getWeatherData()">Obține Date Meteo</button>
         <button onclick="getTemperatureData()">Temperatura</button>
