--- a/templates/interfata_clientv2.html
+++ b/templates/interfata_clientv2.html
@@ -49,7 +49,7 @@
 <body>
     <div class="container">
         <h1>MeteoHub</h1>
-        <h2>Apasă pe butonul cu informația dorită</h2>
+        <h2>Apasă pe butonul pentru informația dorită</h2>
         
         <button onclick="getWeatherData()">Obține Date Meteo</button>
         <button onclick="getTemperatureData()">Temperatura</button>
